<resources>
    <string name="app_name">ExpOCR!</string>

    <string name="facebook_app_id">1374796315910167</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">New here? Sign up</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_email">This email address is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_amount">This currency amount is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- strings in main menu page -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_transaction">Add Transaction</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="action_create_group">Create Group</string>
    <string name="action_search">search for something...</string>

    <!-- strings in sign up page -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign up</string>
    <string name="prompt_reenter_password">Re-enter Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="error_invalid_password_no_lower">Password should have lower case letter</string>
    <string name="error_invalid_password_no_upper">Password should have upper case letter</string>
    <string name="error_invalid_password_no_special">Password should have special letter</string>
    <string name="error_cannot_match_password">Should be the same as password</string>

    <!-- strings in add transaction page -->
    <string name="prompt_amount">Enter amount</string>
    <string name="prompt_memo">Enter a memo</string>
    <string name="prompt_fab">Select a category for this transaction</string>

    <string name="prompt_user">Please select users</string>



    <string name="owe_full">You owe full amount</string>
    <string name="owed_full">You are owed full amount</string>
    <string name="owe_share">You owe equal split</string>
    <string name="owed_share">You are owed equal split</string>

    <string name="select_category">Select a category for this transaction</string>
    <string name="category_general">General</string>

    <string-array name="transaction_options">
        <item>For individual</item>
        <item>For group</item>
    </string-array>

    <string-array name="split_spinner_array">
        <item>@string/owe_full</item>
        <item>@string/owe_share</item>
        <item>@string/owed_full</item>
        <item>@string/owed_share</item>

    </string-array>

    <string-array name="transaction_category">
        <item>@string/select_category</item>
        <item>@string/category_general</item>
        <item>Shopping</item>
        <item>Food</item>
        <item>Rent</item>
        <item>Health</item>
        <item>Clothing</item>
        <item>Holidays</item>
        <item>Fuel</item>
        <item>Auto</item>
        <item>Sports</item>
    </string-array>


    <string-array name="user_options">
        <item>Me</item>
    </string-array>

    <string name="friend_activity">Friend</string>
    <string name="group_activity">Group</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>

    <!-- strings in forgot password -->
    <string name="prompt_vericode">Enter verification code</string>
    <string name="action_request_vericode">Request Verification Code</string>
    <string name="action_change_password">Change Password</string>

    <!-- record payment -->
    <string-array name="payment_otions_array">
        <item>Cash</item>
        <item>Venmo</item>
        <item>Chase Quickpay</item>
        <item>Other</item>
    </string-array>

    <!-- delete transaction menu -->
    <string name="menu_delete">Delete Transaction</string>
    <string name="title_addtransactionreceiptitem_list">Friend List</string>
    <string name="title_addtransactionreceiptitem_detail">Receipt</string>
    <string name="title_activity_group_settings">GroupSettingsActivity</string>

</resources>
