<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.example.mihika.expocr.LoginActivity"
    android:layout_margin="10dp"

    android:background="#80000000"
    android:backgroundTint="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:visibility="gone" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="10dp"

        android:src="@drawable/ic_app_logo"/>


    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_wrapper">

            <AutoCompleteTextView
                android:id="@+id/email"
                style="@style/Base.V12.Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="false"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/ap_gray"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:backgroundTint="@color/colorPrimary_200"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_wrapper"
            android:layout_below="@+id/email_wrapper">

            <EditText
                android:id="@+id/password"
                style="@style/Base.V12.Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/colorPrimary_200"
                android:fontFamily="@android:string/cancel"
                android:hint="@string/prompt_password"
                android:textColorHint="@color/ap_gray"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/action_sign_in"
            android:backgroundTint="@color/colorbutton"
            android:layout_below="@+id/password_wrapper"/>


        <com.facebook.login.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ap_transparent"
            android:layout_below="@+id/email_sign_in_button"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:drawableTint="@color/com_facebook_button_login_background_color"
            android:textSize="@dimen/edit_text"
            android:textColor="@color/com_facebook_button_login_background_color"
            />


        <Button
            android:id="@+id/forgot_password"
            style="@style/Base.Widget.AppCompat.Button.Borderless"

            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"

            android:text="@string/action_forgot_password"
            android:textColor="@color/ap_gray"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/email_sign_up_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"

            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"

            android:text="@string/action_sign_up"

            android:textColor="@color/ap_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </RelativeLayout>
</RelativeLayout>
