<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:weightSum="3"
    android:focusable="true"
    android:focusableInTouchMode="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7"
            android:layout_weight="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <AutoCompleteTextView
                    android:id="@+id/forgot_password_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:backgroundTint="@color/colorPrimary"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/request_vericode_button"
                android:backgroundTint="@color/ap_transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginTop="16dp"
                android:text="@string/action_request_vericode"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/vericode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_vericode"
            android:imeActionId="@+id/forgot_password"
            android:imeActionLabel="@string/action_request_vericode"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:inputType="textFilter"
            android:singleLine="true"
            android:backgroundTint="@color/colorPrimary"/>

    </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/change_password_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Next"
            android:backgroundTint="@color/colorbutton"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_weight="1"/>

    </LinearLayout>


