<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mihika.expocr.SignupActivity"
    android:weightSum="1"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- Signup progress -->

    <ScrollView
        android:id="@+id/group_transaction_form"
        android:layout_width="match_parent"
        android:layout_marginTop="75dp"
        android:layout_height="329dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:translationX="-5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <com.example.mihika.expocr.MultiSelectionSpinner
                android:id="@+id/group_transaction_user_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="40sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/add_group_transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_amount"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/add_group_transaction_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_memo"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/group_transaction_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:entries="@array/transaction_category"
                android:prompt="@string/prompt_fab"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="40sp"
                android:theme="@style/AlertDialog.AppCompat.Light" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/add_group_transaction_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Add"
        android:textStyle="bold" />


</LinearLayout>
