<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mihika.expocr.SignupActivity"
    android:weightSum="1"
    android:background="#80000000"
    android:backgroundTint="@color/com_facebook_button_login_silver_background_color"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- Signup progress -->

    <ScrollView
        android:id="@+id/transaction_form"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:layout_marginTop="1dp"
        android:layout_weight="0.42"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:translationX="-5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <AutoCompleteTextView
                android:id="@+id/add_transaction_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Share transaction with:"
                android:inputType="text"
                android:maxLines="1"
                android:visibility="visible" />


            <AutoCompleteTextView
                android:id="@+id/add_transaction_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/prompt_memo"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />


            <AutoCompleteTextView
                    android:id="@+id/add_transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_amount"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />


            <Spinner
                android:id="@+id/split_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/split_spinner_array"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:prompt="@string/prompt_fab"
                android:textSize="40sp"
                android:theme="@style/AlertDialog.AppCompat.Light"
                android:translationX="-5dp" />

            <Spinner
                android:id="@+id/transaction_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:entries="@array/transaction_category"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginTop="35dp"
                android:prompt="@string/prompt_fab"
                android:textSize="40sp"
                android:theme="@style/AlertDialog.AppCompat.Light"
                android:translationX="-5dp" />

            <!--<Spinner-->
            <!--android:id="@+id/transaction_kind_spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="30dp"-->
            <!--android:entries="@array/transaction_options"-->
            <!--android:prompt="@string/prompt_fab"-->
            <!--android:paddingBottom="5dp"-->
            <!--android:paddingTop="5dp"-->
            <!--android:textSize="40sp"-->
            <!--android:theme="@style/AlertDialog.AppCompat.Light"-->
            <!--android:translationX="-5dp" />-->

            <!--<com.example.mihika.expocr.MultiSelectionSpinner-->
                <!--android:id="@+id/user_spinner"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:paddingBottom="5dp"-->
                <!--android:paddingTop="5dp"-->
                <!--android:textSize="40sp"-->
                <!--android:visibility="invisible" />-->


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/add_transaction_from_receipt"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_menu_camera"
        android:drawableStart="@drawable/ic_menu_camera"
        android:text="Scan a bill"
        android:textStyle="bold" />


    <Button
        android:id="@+id/add_transaction_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="Add"
        android:textStyle="bold" />


</LinearLayout>
